always show scrollbar (to prevent horizontal jumping)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -196,3 +196,8 @@
 }
 
 @import "responsive";
+
+// Always show scrollbar (to prevent horizontal jumping)
+html {
+    overflow-y: scroll;
+}
